--- a/app/index.jade
+++ b/app/index.jade
@@ -64,6 +64,7 @@ html.no-js
     script(src='bower_components/angular-resource/angular-resource.js')
     script(src='bower_components/angular-cookies/angular-cookies.js')
     script(src='bower_components/angular-sanitize/angular-sanitize.js')
+    script(src='bower_components/angular-strap/dist/angular-strap.js')
     // endbuild
     // build:js({.tmp,app}) scripts/scripts.js
     script(src='scripts/app.js')
