--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -52,5 +52,16 @@ html
           td
             input(type='text')
           td
+      tfoot
+        tr
+          td
+          td
+          td
+          td
+          td
+          td
+            button.btn.btn-primary(style="width:100%",ng-class='{disabled : loadingPage}',ng-click="loadNextPage()")
+              span &nbsp;Load {{constants.pageSize}} more&hellip;
+              i.icon-plus.icon-white
 
 
