--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -5,6 +5,17 @@ html
       span About
     .row
         .span8.offset2.section-content
-            p Blah blah blah, all about this app.
-            p Blah blah blah, more details.
-            p Hello world!
+            h3 Ultimate Crossword
+            h4
+              | v#{pkg.version}, by
+              a(href='http://nolanlawson.com') Nolan Lawson
+              | .
+            p This app is 100% open-source and awaits your improvements
+              a(href='http://github.com/nolanlawson/ultimate-crossword-app') on GitHub
+              | .
+            p Made with lots of love, and help from:
+              ul
+                li: a(href='https://couchdb.apache.org/') CouchDB
+                li: a(href='http://pouchdb.com/') PouchDB
+                li: a(href='http://www.angularjs.org/') AngularJS
+                li: a(href='http://yeoman.io/') Yeoman
