--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -30,7 +30,7 @@ html
             p
               | Unless someone manages to guess Adobe's cipher key (brute force seems to be the only way), the majority of the passwords are probably safe.
               | Plus, Adobe already sent out
-              a(href='http://helpx.adobe.com/x-productkb/policy-pricing/customer-alert.html?PID=3662453) a security advisory
+              a(href='http://helpx.adobe.com/x-productkb/policy-pricing/customer-alert.html?PID=3662453') a security advisory
               | telling their users to change their passwords.
             p 
               | Also, anyone who set their password to "adobe123" or "pikachu" couldn't care much about security.  And if they do, I hope they consider
