--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -32,21 +32,19 @@ html
               | Plus, Adobe already sent out
               a(href='http://helpx.adobe.com/x-productkb/policy-pricing/customer-alert.html?PID=3662453') a security advisory
               | telling their users to change their passwords.
-            p 
-              | Also, anyone who set their password to "adobe123" or "pikachu" couldn't care much about security.  And if they do, I hope they consider
-              | this a wakeup call!
             h3 Why did you create this site?
             p
               | I made it as a proof-of-concept for Randall's cartoon, to show that the Adobe leak really does make for an excellent crossword puzzle.
             p 
               | Also, I'm making a statement about how important it is to do security correctly.  Passwords like "adobe123", 'pikachu', and even 'flipper'
-              | just aren't very secure, folks.
-            h3 What can end-users do to improve their own password security?
+              | just aren't very good, folks.
+            h3 So what can end-users do to improve their own password security?
             p
-              a(href='http://nolanlawson.com/2012/12/01/personal-password-security-that-actually-works/') I wrote a blog post
-              | about my own personal password system, which costs nothing and requires no special technical knowledge.  (TL;DR:
-              a(href='http://www.joelonsoftware.com/items/2008/09/11b.html') use Dropbox and PasswordGorilla/PasswdSafe/KeePass
-              | .)  Anyone using this system would greatly minimize their exposure to a leak like Adobe's, because their passwords aren't
+              | I wrote 
+              a(href='http://nolanlawson.com/2012/12/01/personal-password-security-that-actually-works/') this blog post 
+              | about my own personal password system, which costs nothing and requires no special technical knowledge.  (TL;DR: 
+              a(href='http://www.joelonsoftware.com/items/2008/09/11b.html') use Dropbox and PasswordGorilla/PasswdSafe/KeePass 
+              | .)  Anyone using this system would greatly minimize their exposure to a leak like Adobe's, because their passwords aren't 
               | re-used across multiple sites.
             h3 What should developers do to improve user security?
             p
