--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -37,7 +37,7 @@ html
               | I made it as a proof-of-concept for Randall's cartoon, to show that the Adobe leak really does make for an excellent crossword puzzle.
             p 
               | Also, I'm making a statement about how important it is to do security correctly.  Passwords like "adobe123", 'pikachu', and even 'flipper'
-              | just aren't very good, folks.
+              | just aren't cutting it, folks.
             h3 So what can end-users do to improve their own password security?
             p
               | I wrote 
