--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -47,14 +47,8 @@ html
           td
       tfoot
         tr
-          td
-          td
-          td
-          td
-          td
-          td
-          td
-            button.btn.btn-primary(style="width:100%",ng-class='{disabled : loadingPage}',ng-click="loadNextPage()")
+          td(colspan=7,style="text-align:left;")
+            button.btn.btn-primary(ng-class='{disabled : loadingPage}',ng-click="loadNextPage()")
               span &nbsp;Load {{constants.pageSize}} more&hellip;
               i.icon-plus.icon-white
 
