--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -7,15 +7,21 @@ html
         .span8.offset2.section-content
             h3 Ultimate Crossword
             h4
-              | v#{pkg.version}, by
+              | v#{pkg.version}, by&nbsp;
               a(href='http://nolanlawson.com') Nolan Lawson
               | .
-            p This app is 100% open-source and awaits your improvements
+            p
+              | This app is 100% open-source and awaits your improvements&nbsp;
               a(href='http://github.com/nolanlawson/ultimate-crossword-app') on GitHub
               | .
-            p Made with lots of love, and help from:
-              ul
-                li: a(href='https://couchdb.apache.org/') CouchDB
-                li: a(href='http://pouchdb.com/') PouchDB
-                li: a(href='http://www.angularjs.org/') AngularJS
-                li: a(href='http://yeoman.io/') Yeoman
+            p
+              | I am not endorsed by Adobe or Randall Munroe.
+              | But I would be flattered if either one sent me
+              | email/hatemail/lovemail/a C&amp;D/a UPS box full of brownies.
+            p
+              | Made with lots of love, and help from:
+            ul
+              li: a(href='https://couchdb.apache.org/') CouchDB
+              li: a(href='http://pouchdb.com/') PouchDB
+              li: a(href='http://www.angularjs.org/') AngularJS
+              li: a(href='http://yeoman.io/') Yeoman
