make the table more compact horizontally

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -47,6 +47,10 @@ ul > li {
 
 }
 
+.hidden {
+  visibility : hidden;
+}
+
 .ajax-loader {
   background: url(images/ajax-loader.gif) center center no-repeat;
   height : 100px;
