--- a/app/views/mixins/block-label.jade
+++ b/app/views/mixins/block-label.jade
@@ -1,6 +1,6 @@
 //- a block label with a link
-mixin block-label(idText, visibility)
-  .block-label(style='visibility:#{visibility};')
+mixin block-label(idText, visibility, display)
+  .block-label(style='visibility:#{visibility};display:#{display};')
     a.label(href='#',ng-class='getLabelClass(#{idText})',
     ng-href='#/block/{{#{idText}}}')
       span.block-label {{#{idText}}}&nbsp;
