add search button functionality

--- a/app/index.jade
+++ b/app/index.jade
@@ -70,7 +70,9 @@ html.no-js
     script(src='scripts/app.js')
     script(src='scripts/services/constants.js')
     script(src='scripts/services/blocks.js')
+    script(src='scripts/services/search.js')
     script(src='scripts/controllers/main.js')
     script(src='scripts/controllers/navbar.js')
+    script(src='scripts/controllers/block-detail.js')
 
     // endbuild
