--- a/app/views/blocks/navbar.jade
+++ b/app/views/blocks/navbar.jade
@@ -10,8 +10,8 @@
         ul.nav
           li(ng-click="$parent.selectedTabId = tab.id",ng-repeat="tab in tabs",ng-class="{active: tab.id == $parent.selectedTabId}")
             a(href='#',ng-href='{{tab.getHref()}}',ng-bind='tab.title')
-        form.navbar-search.pull-left
-          input.search-query(type="text",placeholder="Search",ng-model="$parent.q",ng-submit="performSearch()")
+        form.navbar-search.pull-left(ng-submit="performSearch()")
+          input.search-query(type="text",placeholder="Search",ng-model="searchService.q")
 //      ul.pull-right.ng-cloak.horizontal-navbar(ng-controller="SignupLoginButtonController")
 //        li: span.nav-username(ng-show="session.loggedIn")
 //          | {{session.username}}
