--- a/app/404.jade
+++ b/app/404.jade
@@ -128,6 +128,6 @@ html(lang='en')
       ul
         li a mistyped address
         li an out-of-date link
-      script
+      script.
         var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
       script(src='//linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js')
