--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -73,7 +73,7 @@ ul > li {
   }
 }
 
-.block-label > a {
+.label-link > a {
 
   text-decoration : none;
 
@@ -82,6 +82,13 @@ ul > li {
   }
 }
 
+.big-label {
+  font-size      : 3em;
+  font-weight    : bold;
+  line-height    : 38px;
+  padding        : .1em .2em;
+  border-radius  : 5px;
+}
 
 $label-color-0: rgb(185, 72, 72);
 $label-color-1: rgb(185, 114, 72);
