--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -10,7 +10,11 @@ html
               | You and I did, with some help from Adobe.&nbsp;
               a(href='http://arstechnica.com/security/2013/11/how-an-epic-blunder-by-adobe-could-strengthen-hand-of-password-crackers/')
                 | They accidentally leaked&nbsp;
-              | 153 million encrypted user passwords and hints, which is where this "crossword puzzle" comes from.
+              | 153 million encrypted user passwords and hints, which is where the "crossword puzzle" comes from.
+            p
+              | I got the idea from this&nbsp;
+              a(href='http://xkcd.com') XKCD&nbsp;
+              | comic:
             p.image-box
               a(href='http://xkcd.com/1286/')
                 img(src="http://imgs.xkcd.com/comics/encryptic.png",width=473,height=541)
@@ -20,18 +24,30 @@ html
               em hash&nbsp;
               | them (which is bad), and they kept the password hints in clear text.
             p
-              | Basically, their encryption algorithm splits up passwords into sequences of 8 characters, each of which corresponds to the same block,
+              | Basically, their encryption method split up passwords into sequences of 8 characters, each of which
+              | corresponded to the same block,
               | repeated across all passwords.  This creates an interesting byproduct.
             p
               | Look at the cartoon above.  We know that "weather vane sword" and "favorite of 12 apostles" are hints for
-              | the same block, so the only 8-letter solution is "matthias". (The first hint is a reference to the&nbsp;
+              | the same block, and the only 8-letter solution that fits both is&nbsp;
+              span.monospace-font matthias
+              | . (The first hint is a reference to the&nbsp;
               a(href='https://en.wikipedia.org/wiki/Redwall') Redwall&nbsp;
               | books.)
             p
-              | Now, if we assume "name1" is a hint for
-              | "matthias1", then we've not only solved "matthias", but also "1".  Combine this with "duh", which is probably
-              | a hint for "password" (all too common),
-              | and we've successfully cracked the 5th password as "password1", even though there's no hint! 
+              | Now, if we assume "name1" is a hint for&nbsp;
+              span.monospace-font matthias1
+              | , then we've not only solved&nbsp;
+              span.monospace-font matthias
+              | , but also&nbsp;
+              span.monospace-font 1
+              | .  Combine this with "duh", which is probably
+              | a hint for&nbsp;
+              span.monospace-font password
+              | &nbsp;(all too common),
+              | and we've successfully cracked the 5th password as&nbsp;
+              span.monospace-font password1
+              | , even though there's no hint!
             p
               | Neat, huh?&nbsp;
               a(href='http://www.explainxkcd.com/wiki/index.php?title=1286') A lot of XKCD readers think so, too.
@@ -41,21 +57,28 @@ html
               | Plus, Adobe already sent out&nbsp;
               a(href='http://helpx.adobe.com/x-productkb/policy-pricing/customer-alert.html?PID=3662453') a security advisory&nbsp;
               | telling their users to change their passwords.
-            p Anyway, the data itself is readily available on the Internet.  Although I did take the precaution of removing the
-              | encrypted blocks from the database exposed via this site, just in case.
+            p And even though the leaked file is readily available on the Internet, I took the precuation of only exposing what's
+              | necessary for the crossword puzzle, just in case.
             h4 Why did you create this site?
             p
-              | This site is as a proof-of-concept for Randall's cartoon, to show that the Adobe leak really does make for an excellent crossword puzzle.
+              | I made it as a proof-of-concept for Randall's cartoon, to show that the Adobe leak really does make for an excellent crossword puzzle.
             p 
-              | I also hope to make a statement about how important it is to do security correctly.  Passwords like "adobe123", 'pikachu', and even 'flipper'
-              | just aren't cutting it, folks.
-            h4 So what can end-users do to improve their own password security?
+              | Also, I'm hoping that this site makes a statement about the importance of good security.  Protip: if
+              | I can make a crossword puzzle out of your database, then your security sucks.
+            h4 So what can users do to improve their password security?
+            p
+              | First off, passwords like "adobe123", 'pikachu', and even 'keroppi'
+              | just aren't cutting it, folks.  Human memory has its limits, though, which is why we need a stronger system.
             p
               | I wrote&nbsp;
               a(href='http://nolanlawson.com/2012/12/01/personal-password-security-that-actually-works/') this blog post&nbsp;
-              | about my own personal password system, which costs nothing and requires no special technical knowledge.  (TL;DR:&nbsp;
+              | about the system I use for my own passwords, which costs nothing and requires no special technical knowledge.  (TL;DR:&nbsp;
               a(href='http://www.joelonsoftware.com/items/2008/09/11b.html') use Dropbox and Password Gorilla&nbsp;
-              | .)  Anyone using this system would greatly minimize their exposure to a leak like Adobe's, because their passwords aren't 
+              | .)  Your passwords look like&nbsp;
+              span.monospace-font Mt^cdxE973N$C\@=
+              | , they're always different, and you don't have to memorize them.
+            p
+              | Anyone using this system would greatly minimize their exposure to a leak like Adobe's, because their passwords aren't
               | re-used across multiple sites.
             h4 What should developers do to improve user security?
             p
