--- a/app/views/blocks/main-block-row.jade
+++ b/app/views/blocks/main-block-row.jade
@@ -1,7 +1,8 @@
 tr
   td
-    div(style="margin-right:18px")
-      mixin block-label('block._id', 'visible', 'block')
+    div(style="display:inline-block;margin-right:20px;")
+      mixin block-label('block._id', 'visible', 'inline-block')
+      i.icon-chevron-right.hidden(style="display:inline-block;")
   //- the following is just to make the table formatting look right
   td: mixin block-label('"12345"', 'hidden', 'block')
   td {{block.count}}
